Better spacing for Top Sites' items, center align Top Site's favicons, dont use a:visited style for Top Sites' text, blur effect for Top Sites' items, fix CSS for blur effect, support for '-webkit' flag in backdrop blur in CSS, effect in borders of Top Sites' items, hover effect for Top Sites' items, basic fix for 'a:active', button to open IPFS pinned files (alpha)

--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,16 @@ body {
     padding: 10px;
     border-radius: 50px
 }
-
-@supports (backdrop-filter: blur(7px)) {
+@supports (backdrop-filter: blur(6px)) {
   #app {
     backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(7px);
+    background: rgba(255, 255, 255, 0.2) !important;
+    color: #000 !important;
+  }
+}
+@supports (-webkit-backdrop-filter: blur(6px)) {
+  #app {
+    -webkit-backdrop-filter: blur(6px);
     background: rgba(255, 255, 255, 0.2) !important;
     color: #000 !important;
   }
@@ -195,20 +200,49 @@ input[type="text"], input[type="search"] {
 .list-group-item a {
   text-decoration: none;
   display: inline-block;
-  padding: 80px 10px 5px 10px;
+  padding: 10px;
   background: #fff;
-  line-height: 25px;
+  line-height: 10px;
   margin-left: 5px;
   border-radius: 20px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   max-width: 130px;
+  text-shadow: 0px 0px 2px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
+  transition: all .3s ease-in-out!important;
 }
+.list-group-item a:hover {
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5)!important;
+  transform: translate3d(0px, -10px, 0px)!important;
+}
+@supports (backdrop-filter: blur(6px)) {
+  .list-group-item a {
+    backdrop-filter: blur(6px);
+    background: none!important;
+  }
+}
+@supports (-webkit-backdrop-filter: blur(6px)) {
+  .list-group-item a {
+    -webkit-backdrop-filter: blur(6px);
+    background: none!important;
+  }
+}
+
+.list-group-item a:visited {
+  color: inherit
+}
+.list-group-item a:active {
+    color: #000000;
+}
+
 .list-group-item.recommended-sites-item a {
-  max-width: 100%;
-  padding: 10px 10px 5px 10px;
+  max-width: 100%!important;
+  padding: 10px 10px 5px 10px!important;
+  line-height: 25px!important;
 }
 .list-group-item a img {
   width: 80px;
+  filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.5))
 }
